[B][COLOR gold]v4.00.11[/COLOR][/B]
- Fixed de-accent scraping title in Kodi 19

[B][COLOR gold]v4.00.10[/COLOR][/B]
- Make sure we always use English TV show title for scraping

[B][COLOR gold]v4.00.08-9[/COLOR][/B]
- Added logging functions (on Tools menu):
    View add-on's log
    Upload add-on's log to a paste website, for easier debugging
    Empty log
- Other logging changes

[B][COLOR gold]v4.00.07[/COLOR][/B]
- Tweaked title query for scraping

[B][COLOR gold]v4.00.05-6[/COLOR][/B]
- Fixed setting Viewtypes
- Fixed issues with some episodes listings
- Some more code cleanup

[B][COLOR gold]v4.00.03-4[/COLOR][/B]
- Withdraw uncached torrents from autoplay
- Fixed issue where local (translated) TV show title would pass for scraping
- Code cleanup

[B][COLOR gold]v4.00.xx[/COLOR][/B]
- Switched to TMDb API for TV Shows metadata
    [I]Note:[/I]  This is a big change - large parts of the code have been re-written
    and many other parts (some obvious some not) have been touched.
    Please report any issues at: [I]https://github.com/host505/plugin.video.theoath/issues[/I]
    Thanks to all the testers involved with this release.

[B][COLOR gold]v3.6.001[/COLOR][/B]
- Fixed issue with size filtering

[B][COLOR gold]v3.6.000[/COLOR][/B]
- Description update
- Stop attempting to scrobble when playback fails to start
- Minor source fetching function tweaks

[B][COLOR gold]v3.5.007[/COLOR][/B]
- Removed Openscrapers support
    Causes unsolvable installation issue in the case of Kodi 18 to 19 upgrade
    and openscrapers was already installed.

[B][COLOR gold]v3.5.005-6[/COLOR][/B]
- Minor fixes

[B][COLOR gold]v3.5.004[/COLOR][/B]
- Attempt to fix error when upgrade Kodi 18 to 19 has occured and
    openscrapers package was already installed
    NOTE: Openscrapers is not Kodi 19 compatible so can't be used.
    If you have it, uninstall from Add-ons/My add-ons/Program add-ons.

[B][COLOR gold]v3.5.003[/COLOR][/B]
- Applied extra artwork to the player